# runspool

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  agent-json-output.md  cli.md  concepts.md  design-decisions.md  examples.md  workflows.md  writing-steps.md
examples/client-intel-brief/: README.md  config.yaml
examples/client-intel-brief/data/: client_profile.md  requirements.md  sources.yaml
examples/client-intel-brief/steps/: intel_steps.py
examples/creator-publishing-pipeline/: README.md  config.yaml
examples/creator-publishing-pipeline/materials/: notes.md  source.md
examples/creator-publishing-pipeline/steps/: creator_steps.py
examples/local-file-pipeline/: README.md  config.yaml
examples/local-file-pipeline/inbox/: invoice.txt  meeting-notes.txt  support-ticket.txt
sample-output/: README.md  inspect-1.json  status.json
sample-output/ready/1/: classification.json  metadata.json  normalized.md  summary.json  summary.md
scripts/: smoke_examples.sh
src/runspool/: __init__.py  app.py  cli.py  clock.py  commands.py  config.py  daemon.py  display.py  doctor.py  models.py  registry_builder.py  runtime.py  views.py
src/runspool/builtin_steps/: __init__.py  archive.py  file_intake.py  markdown_normalize.py  text_classify.py  text_summarize.py  workspace.py
src/runspool/engine/: __init__.py  coordinator.py  registry.py  runner.py  step.py  worker_pool.py
src/runspool/persistence/: __init__.py  connection.py  (+5 more)
tests/: conftest.py  test_builtin_steps.py  test_cli.py  test_config.py  test_models.py  test_registry_builder.py  test_views.py
tests/engine/: test_coordinator.py  test_registry.py  test_runner.py
tests/persistence/: test_connection.py  test_repository.py  test_state_machine.py
(+5 files in other folders)
